--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/Images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caloocan High School</title>
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&family=Lato:wght@300&family=Poppins:wght@300&family=Quicksand&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Karla:wght@300&family=Lato:wght@300&family=Poppins:wght@300&family=Quicksand&family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
